fix: Fixed transation table spacing

--- a/din_din/src/components/table/style.css
+++ b/din_din/src/components/table/style.css
@@ -5,8 +5,10 @@
   height: 3.625rem;
 }
 
+
 .transation-table {
   border-collapse: collapse;
+  width: 62.5rem;
 }
 
 .list-item {
